added register and forgot password button. Adjusted layout and server access method